--- a/socs19/main.tex
+++ b/socs19/main.tex
@@ -81,11 +81,9 @@
 \usepackage{booktabs}
 
 %% Our macros
-\newcommand{\vb}[1]{{\small\sf \color{blue} Vadim: #1}}
+\newcommand{\jb}[1]{{\small\sf \color{blue} Jorge: #1}}
 \newcommand{\ch}[1]{{\small\sf \color{red} Carlos: #1}}
-\newcommand{\sk}[1]{{\small\sf \color{orange} Sven: #1}}
-\newcommand{\wy}[1]{{\small\sf \color{cyan} Will: #1}}
-\newcommand{\jb}[1]{{\small\sf \color{magenta} Jorge: #1}}
+\newcommand{\rg}[1]{{\small\sf \color{orange} Rodrigo: #1}}
 
 \newtheorem{definition}{Definition}
 \newtheorem{theorem}{Theorem}
@@ -130,7 +128,6 @@
 \input{intro}
 \input{background}
 \input{asp}
-
 \input{experiments}
 \input{conclusions}
 
