--- a/aaai20/ref.bib
+++ b/aaai20/ref.bib
@@ -89,7 +89,7 @@
 
 @string{DX07  = "\longshort{\Proceedings of the 18th \International Workshop on Principles of Diagnosis}{DX}"}
 
-
+@string{ECAI92  = "\longshort{\Proceedings \ofthe 10th European \Conference on \AI{}}{ECAI}"}
 @string{ECAI00  = "\longshort{\Proceedings \ofthe 14th European \Conference on \AI{}}{ECAI}"}
 @string{ECAI04  = "\longshort{\Proceedings \ofthe 16th European \Conference on \AI{}}{ECAI}"}
 @string{ECAI08  = "\longshort{\Proceedings \ofthe 18th European \Conference on \AI{}}{ECAI}"}
@@ -164,7 +164,7 @@
 
 @string{LNCS    = "LNCS"}
 
-@string{LPAR99 = "\longshort{\Proceedings of 6th \International \Conference on Logic Programming and Automated Reasoning}{LPAR}"}  
+@string{LPAR99 = "\longshort{\Proceedings of 6th \International \Conference on Logic Programming and Automated Reasoning}{LPAR}"}
 @string{LPNMR04 = "\longshort{\Proceedings \ofthe 7th \International \Conference on Logic Programming and Nonmonotonic Reasoning}{LPNMR}"}
 @string{LPNMR07 = "\longshort{\Proceedings \ofthe 9th \International \Conference on Logic Programming and Nonmonotonic Reasoning}{LPNMR}"}
 @string{NRAC05 = "\longshort{5th Workshop on Nonmonotonic Reasoning, Action and Change}{NRAC}"}
@@ -239,7 +239,7 @@
   year      = {2009},
   pages     = {619-668}
 }
- 
+
 
 @inproceedings{bie-fri-mci06,
   AUTHOR={Meghyn Bienvenu and Christian Fritz and Sheila A. McIlraith},
@@ -466,7 +466,7 @@
         title = {On the Compilation of Plan Constraints and Preferences},
         booktitle = ICAPS06,
         year = 2006,
-        note = {To appear}  
+        note = {To appear}
 }
 
 
@@ -502,7 +502,7 @@
             Implementing Dynamical Systems",
   publisher = "MIT Press",
   address = "Cambridge, MA",
-  year = 2001  
+  year = 2001
 
 }
 
@@ -522,7 +522,7 @@ Heuristic Search},
   institution = "Yale Center for Computational Vision and Control",
   year = 1998,
   number = "TR-98-003/DCS TR-1165"
-} 
+}
 
 @inproceedings{mcdermott96,
   author    = {Drew V. McDermott},
@@ -545,12 +545,12 @@ Heuristic Search},
 
 
 @techreport{pddl22,
-  author = {Stefan Edelkamp and J\"{o}rg Hoffmann}, 
+  author = {Stefan Edelkamp and J\"{o}rg Hoffmann},
   title  = {{PDDL}2.2: The Language for the Classical Part \ofthe 4th International Planning Competition},
   institution = {{C}omputer {S}cience {D}epartment, {U}niversity of {F}reiburg},
   year = 2004,
   number = "195"
-} 
+}
 
 @InProceedings{pnueli77,
   author =      {Amir Pnueli},
@@ -1082,7 +1082,7 @@ Trajectory Constraints and Goal Preferences},
   pages     = {39-41},
   address   = {Lake District, England},
   month     = {July}
-}  
+}
 
 
 @inproceedings{yochanps,
@@ -1093,7 +1093,7 @@ Trajectory Constraints and Goal Preferences},
   pages     = {54-57},
   address   = {Lake District, England},
   month     = {July}
-}  
+}
 
 @inproceedings{del-sch-tom04,
   author    = {James P. Delgrande and
@@ -1190,7 +1190,7 @@ Trajectory Constraints and Goal Preferences},
  isbn = {0-201-05594-5},
  publisher = {Addison-Wesley Longman Publishing Co., Inc.},
  address = {Boston, MA, USA},
-} 
+}
 
 
 
@@ -1761,7 +1761,7 @@ Trajectory Constraints and Goal Preferences},
 @inproceedings{hof-bra05,
   author = 	 {J{\"o}rg Hoffmann and Ronen Brafman},
   title = 	 {Contingent Planning via Heuristic Forward Search with Implicit Belief States},
-  pages =        {71-80}, 
+  pages =        {71-80},
   booktitle = 	 ICAPS05,
   month   =      {June},
   year = 	 2005,
@@ -1777,7 +1777,7 @@ Trajectory Constraints and Goal Preferences},
      pages = {7-14},
      month = {August},
      address = {Edinburgh, Scotland}
-} 
+}
 
 @inproceedings{bai-mci06d,
   author    = {Jorge A. Baier and
@@ -1956,7 +1956,7 @@ Trajectory Constraints and Goal Preferences},
   title = "{C}omplexity {R}esults for {SAS}+ {P}lanning",
   journal = COMPINT,
   volume = {11},
-  number = {4}, 
+  number = {4},
   pages = {625-655},
   year = "1995"
 }
@@ -2352,13 +2352,13 @@ Planning and Scheduling Systems},
   year      = {2007},
   pages     = {305-310}
   }
-  
+
 @inproceedings{GrastienARK07,
 author = {Alban Grastien and Anbulagan and Jussi Rintanen and
                Elena Kelareva},
 title = {Modeling and Solving Diagnosis of Discrete-Event Systems via Satisfiability},
 booktitle = DX07,
-year = {2007} 
+year = {2007}
  }
 
 
@@ -2370,7 +2370,7 @@ year = {2007}
   year      = {2007},
   pages     = {532-537}
 }
-  
+
 @inproceedings{cor-thi-dx94,
     author = {Marie-Odile Cordier and Sylvie Thi\'{e}baux},
     title = {Event-Based Diagnosis of Evolutive Systems},
@@ -2749,7 +2749,7 @@ pages={1555-1575}
    journal = "IEEE Transactions on Robotics and Automation",
    month = "June",
    year = "1992",
-} 
+}
 
 @inproceedings{HernandezB11,
   title = {Real-Time Heuristic Search with Depression Avoidance},
@@ -3962,7 +3962,7 @@ pages={1555-1575}
   pages     = {627--635},
   year      = {2011}
 }
-  
+
 @inproceedings{sokoban,
     author = {Joseph C. Culberson},
     title = {Sokoban is {PSPACE}-complete},
@@ -4051,7 +4051,7 @@ pages={1555-1575}
   author    = {Carlos Hern{\'{a}}ndez and
                Jorge A. Baier},
   title     = {Improving MPGAA* for Extended Visibility Ranges},
-  booktitle = ICAPS17, 
+  booktitle = ICAPS17,
   address = {Pittsburgh, Pennsylvania, USA},
   month    = {June},
   pages     = {149--153},
@@ -4078,13 +4078,13 @@ pages={1555-1575}
 
 @article{GulicOB16,
    title={Using Automated Planning for Traffic Signals Control},
-   volume={28}, 
-   url={http://www.fpz.unizg.hr/traffic/index.php/PROMTT/article/view/1952}, 
-   DOI={https://doi.org/10.7307/ptt.v28i4.1952}, 
-   number={4}, journal={Promet - Traffic \& Transportation}, 
-   author={Gulić, Matija and Olivares, Ricardo and Borrajo, Daniel}, 
-   year={2016}, 
-   month=aug, 
+   volume={28},
+   url={http://www.fpz.unizg.hr/traffic/index.php/PROMTT/article/view/1952},
+   DOI={https://doi.org/10.7307/ptt.v28i4.1952},
+   number={4}, journal={Promet - Traffic \& Transportation},
+   author={Gulić, Matija and Olivares, Ricardo and Borrajo, Daniel},
+   year={2016},
+   month=aug,
    pages={383-391}
 }
 
@@ -4202,7 +4202,7 @@ isbn="978-3-540-68552-4"
  publisher = {INFORMS},
  address = {Institute for Operations Research and the Management Sciences (INFORMS), Linthicum, Maryland, USA},
  keywords = {algorithm engineering, route planning, shortest paths},
-} 
+}
 
 @incollection{BastDGMPSWW16,
   author    = {Hannah Bast and
@@ -4380,5 +4380,19 @@ isbn="978-3-540-68552-4"
   year      = {2005},
   timestamp = {Wed, 23 Nov 2005 14:53:03 +0100},
   biburl    = {https://dblp.org/rec/bib/conf/birthday/FerrarisL05},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{KautzS92,
+  author    = {Henry A. Kautz and
+               Bart Selman},
+  editor    = {Bernd Neumann},
+  title     = {Planning as Satisfiability},
+  booktitle = ECAI92,
+  pages     = {359--363},
+  publisher = {John Wiley and Sons},
+  year      = {1992},
+  timestamp = {Wed, 31 Jul 2019 08:45:08 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/ecai/KautzS92},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
