--- a/aaai20/algorithm.tex
+++ b/aaai20/algorithm.tex
@@ -1,5 +1,5 @@
 %\section{Makespan as a Bound}
-% To guarantee that our model will yield a solution that is \emph{sum-of-costs} optimal we need to provide a maximum $makespan$ $T$ big enough. 
+% To guarantee that our model will yield a solution that is \emph{sum-of-costs} optimal we need to provide a maximum $makespan$ $T$ big enough.
 
 % In figure , we show an example where the increase of the \emph{makespan} returns better \emph{sum-of-costs} solutions. The problem has 3 agents:  $a_1$ needs to go from $(0,1)$ to $(3,1)$. The agents $a_2$ and $a_3$ are already at the goal on the positions $(1,1)$ and $(2,1)$ respectively. We compare the minimum \emph{sum-of-costs} solution with two different \emph{makespans}:
 
@@ -20,33 +20,42 @@
 % Where $c^*(a_j)$ is the optimal cost of the path $a_j$ ignoring the conflicts with other agents.
 % \end{lemma}
 
-\section{Algorithm}
-First we calculate the shortest path for each agent ignoring the conflicts with other agents. The maximum cost and sum of costs of these paths provide a lower bound for the makespan $\mathtt{T}_{min}$ and \emph{sum-of-costs} respectively. Then we define and start solving an ASP program with one of the encodings defined before using $\mathtt{T}=\mathtt{T}_{min}$ as the makespan. If there's no solution we increase $\mathtt{T}$ by 1 and repeat the process.
+\subsection{Finding Cost-Optimal Solutions}
+The encoding proposed so far can find the minimum sum-of-cost solution for a given makespan. We still need to define how to find a true cost-optimal solution.
 
-If the program returns a valid solution then as it was shown in Figure ~\ref{fig:makespancost} it's not guaranteed that is \emph{sum-of-cost} optimal. 
+Following the approach used for SAT encodings for planning \cite{KautzS92}, in our approach we attempt to solve instances for increasing makespan $\mathtt{T}$, until a solution, say $sol_{min}$, is found. Two observations with this process are important. First, we do not need to start increasing $\mathtt{T}$ from 1. As mentioned above, at preprocessing time, for each agent we compute cost the cost $c^*_a$ which ignores other agents. The makespan of any solution must be at least $\max_{a\in\mathcal{A}} c^*_a$ so this can be the inferior limit of our iteration.
 
-The using (bartak)
+Second, let $sol_{min}$ be the solution that is found first. Unfortunately, $sol_{min}$ is a makespan-optimal solution but not necessarily a cost-optimal solution. Now we can compute a bound for the largest makespan $\mathtt{T}_{max}$ at which the cost-optimal solution is found, using the following theoretical result first proposed by \acite{SurynekFSB16}:
+\begin{theorem}[\nbcite{SurynekFSB16}]\label{thm:optimal}
+Let $sol_{min}$ be the makespan-optimal solution for MAPF problem $P$, let $sol^-$ denote a solution to $P$ that ignores all conflicts, and let $\mathtt{T}^-$ denote its makespan. Then the makespan of the cost-optimal solution is at most at $\mathtt{T}_{max}=\mathtt{T}^- + c(sol_{min})-c(sol^-)-1$.
+\end{theorem}
+Thus after we find the first solution $sol_{min}$, we run the solver again for makespan $\mathtt{T}_{max}$ given by Theorem~\ref{thm:optimal}.
 
-So we run the program one last time using $\mathtt{T}=C(M) - 1 - C^-$ and return that solution.
+
+%First we calculate the shortest path for each agent ignoring the conflicts with other agents. The maximum cost and sum of costs of these paths provide a lower bound for the makespan $\mathtt{T}_{min}$ and \emph{sum-of-costs} respectively. Then we define and start solving an ASP program with one of the encodings defined before using $\mathtt{T}=\mathtt{T}_{min}$ as the makespan. If there's no solution we increase $\mathtt{T}$ by 1 and repeat the process.
+
+%If the program returns a valid solution then as it was shown in Figure ~\ref{fig:makespancost} it's not guaranteed that is \emph{sum-of-cost} optimal.
+
+%The using (bartak)
+
+%So we run the program one last time using $\mathtt{T}=C(M) - 1 - C^-$ and return that solution.
 
 
-\begin{algorithm}
-\DontPrintSemicolon
-\KwIn{A MAPF problem}
-$\mathtt{T} \gets \max\limits_{i=\{1..K\} }{c^*(a_i)}$\;
-$C^- \gets \sum_{\substack{i=1}}^{k} c^*(a_i)$\;
-$P(\mathtt{T}) \gets$ Create an ASP program from input problem with makespan T\;
-$M \gets \{\}$\;
-\While{$M$ is empty}{
-  $M \gets$ Solve $P(T)$\;
-  \If{$M$ is not empty}{
-    $C(M) \gets$ cost of the solution of model $M$\;
-    $\Delta \gets C(M) - 1 - C^-$\;
-    $M^* \gets$ Solve $P(\mathtt{T}+\Delta)$\;
-    \Return{M}\;
-  }
-  $\mathtt{T} \gets \mathtt{T}+1$\;
-}
+ \begin{algorithm}
+ \DontPrintSemicolon
+ \KwIn{A MAPF problem}
+ $\mathtt{T} \gets \max\limits_{i=\{1..K\} }{c^*(a_i)}$\;
+ $C^- \gets \sum_{\substack{i=1}}^{k} c^*(a_i)$\;
+ $P(\mathtt{T}) \gets$ Create an ASP program from input problem with makespan T\;% $M \gets \{\}$\;
+  \While{$M$ is empty}{
+   $M \gets$ Solve $P(T)$\;
+   \If{$M$ is not empty}{
+     $C(M) \gets$ cost of the solution of model $M$\;
+     $\Delta \gets C(M) - 1 - C^-$\;
+     $M^* \gets$ Solve $P(\mathtt{T}+\Delta)$\;
+     \Return{M}\;
+   }
+   $\mathtt{T} \gets \mathtt{T}+1$\;
+ }
 
 \end{algorithm}
-
