--- a/aaai20/ref.bib
+++ b/aaai20/ref.bib
@@ -4396,3 +4396,39 @@ isbn="978-3-540-68552-4"
   biburl    = {https://dblp.org/rec/bib/conf/ecai/KautzS92},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@inproceedings{BartakS19,
+  author    = {Roman Bart{\'{a}}k and
+               Jir{\'{\i}} Svancara},
+  editor    = {Pavel Surynek and
+               William Yeoh},
+  title     = {On {SAT}-Based Approaches for Multi-Agent Path Finding with the Sum-of-Costs
+               Objective},
+  booktitle = SOCS19,
+  pages     = {10--17},
+  publisher = {{AAAI} Press},
+  year      = {2019},
+  url       = {https://aaai.org/ocs/index.php/SOCS/SOCS19/paper/view/18323},
+  timestamp = {Wed, 17 Jul 2019 10:38:21 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/socs/BartakS19},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{BartakZSBS17,
+  author    = {Roman Bart{\'{a}}k and
+               Neng{-}Fa Zhou and
+               Roni Stern and
+               Eli Boyarski and
+               Pavel Surynek},
+  title     = {Modeling and Solving the Multi-agent Pathfinding Problem in Picat},
+  booktitle = {\longshort{29th {IEEE} \International \Conference on Tools with \AI}{ICTAI}},
+  address   = {Boston, MA, USA},
+  pages     = {959--966},
+  publisher = {{IEEE} Computer Society},
+  year      = {2017},
+  url       = {https://doi.org/10.1109/ICTAI.2017.00147},
+  doi       = {10.1109/ICTAI.2017.00147},
+  timestamp = {Sat, 24 Nov 2018 11:59:51 +0100},
+  biburl    = {https://dblp.org/rec/bib/conf/ictai/BartakZSBS17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
